# faucet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: testnet.yml
faucet/: __init__.py  aave.py  alchemy.py  chainstack.py  circle.py  rpc.py  sweep.py
scripts/: drip.py  sweep.py
tests/: conftest.py  test_faucet_live.py
